<resources>
    <string name="app_name">GithubUser</string>
    <string name="img">image</string>
    <string name="username">Sample username</string>
    <string name="search_user">Search..</string>
    <string name="bio">Bio : %1</string>
    <string name="join_date">Join Date : 121222</string>
    <string name="foll">0 Follower 1 Following</string>
    <string name="public_repos">Public Repos</string>
    <string name="language">java</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_message">This app requires notification permission to function properly. Please grant the permission in the next screen.</string>
    <string name="notification_permission_positive_button">Open Settings</string>
    <string name="notification_permission_negative_button">Cancel</string>
</resources>