<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.UserDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@null"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/img"/>

        <TextView
            android:id="@+id/txv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_9B9B9B"
            android:textStyle="bold"
            tools:text="@string/username"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toEndOf="@id/btn_back"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header">

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/img" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        app:layout_constraintTop_toTopOf="@id/card_image"
        app:layout_constraintBottom_toBottomOf="@id/card_image"
        app:layout_constraintStart_toEndOf="@id/card_image">

        <TextView
            android:id="@+id/txv_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bio"
            android:textSize="16sp"
            android:textColor="@color/grey_9B9B9B"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txv_join_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/join_date"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_9B9B9B"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_bio"/>

        <TextView
            android:id="@+id/txv_follower_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/foll"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_9B9B9B"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_join_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lbl_public_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/public_repos"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16sp"
        android:textColor="@color/grey_9B9B9B"
        app:layout_constraintStart_toEndOf="@id/card_image"
        app:layout_constraintTop_toBottomOf="@id/card_image"/>

    <TextView
        android:id="@+id/txv_public_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/public_repos"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16sp"
        android:textColor="@color/grey_9B9B9B"
        app:layout_constraintStart_toEndOf="@id/card_image"
        app:layout_constraintTop_toBottomOf="@id/lbl_public_repos"/>

</androidx.constraintlayout.widget.ConstraintLayout>